Thoughtlog: Attachment CRUD.
